-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.6.0, 5.6.1
-
None
-
Linux/X11
Windows (XP)
Start dragging and move the item using InternalMove in QTreeWidget. Next start dragging another item. Notice that the indicator is in wrong (previous) place (see the movie).
On XCB this is a regression [5.6.0->5.6.1 (only QTreeWidget)] due to many fixes inside XCB QPA, but it happens also on Windows on 5.6.0 & 5.6.1, so it can be a QtWidgets bug.
| For Gerrit Dashboard: QTBUG-53541 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 160259,2 | QAbstractItemView: Reset the drop indicator | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |